--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <!-- Challenge 1: Wrap the text below with link that has an absolute path -->
   Absolute Path (external link)
+  <a href="https://s3.amazonaws.com/ironboard-learn/lion.jpg">a lion</a>
 
   <!-- Challenge 2: Wrap the text below with link that has a relative path to about.html-->
   Relative Path (internal link)
