--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
   <!-- Challenge 2: Wrap the text below with link that has a relative path to about.html-->
   Relative Path (internal link)
+  <a href="lion.html">a lion</a>
 
   <!-- Challenge 3: Wrap the img tag below with link uses the target attribute -->
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
+  <a href="https://s3.amazonaws.com/ironboard-learn/lion.jpg" target="blank">
 
 </body>
 </html>
