--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a href="lion.html">a lion</a>
 
   <!-- Challenge 3: Wrap the img tag below with link uses the target attribute -->
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" target="blank">
+  <a href="https://s3.amazonaws.com/ironboard-learn/lion.jpg" target="blank">google></a>
 
 </body>
 </html>
